--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "lodash": "^4.11.1",
+    "minutes-seconds-milliseconds": "^1.0.3",
+    "moment": "^2.12.0",
+    "parse": "^1.8.3",
+    "parse-react": "^0.5.1",
     "react": "^0.14.8",
     "react-native": "^0.23.1"
+  },
+  "devDependencies": {
+    "react": "^0.14.8"
   }
 }
