--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "immutable": "^3.8.0",
     "lodash": "^4.11.1",
     "minutes-seconds-milliseconds": "^1.0.3",
     "moment": "^2.12.0",
