--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "parse-react": "^0.5.1",
     "react": "^0.14.8",
     "react-native": "^0.23.1",
+    "react-native-drawer": "^2.0.0",
     "react-native-navbar": "^1.4.2",
     "react-native-swipeout": "^2.0.12",
     "react-native-vector-icons": "^1.3.4",
