--- a/package.json
+++ b/package.json
@@ -18,18 +18,16 @@
     "moment": "^2.12.0",
     "parse": "^1.8.3",
     "parse-react": "^0.5.1",
-    "react": "^0.14.8",
-    "react-native": "^0.23.1",
+    "react": "^0.14.0",
+    "react-native": "^0.24.0",
     "react-native-drawer": "^2.0.0",
     "react-native-navbar": "^1.4.2",
+    "react-native-router-flux": "^3.24.0",
     "react-native-swipeout": "^2.0.12",
     "react-native-vector-icons": "^1.3.4",
     "react-redux": "^4.4.5",
     "redux": "^3.4.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1"
-  },
-  "devDependencies": {
-    "react": "^0.14.8"
   }
 }
