--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "parse-react": "^0.5.1",
     "react": "^0.14.0",
     "react-native": "^0.24.0",
+    "react-native-collapsible": "^0.5.6",
     "react-native-drawer": "^2.0.0",
     "react-native-navbar": "^1.4.2",
     "react-native-router-flux": "^3.24.0",
-    "react-native-swipeout": "^2.0.12",
     "react-native-vector-icons": "^1.3.4",
     "react-redux": "^4.4.5",
     "redux": "^3.4.0",
